--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.4",
+    "prop-types": "^15.7.2",
     "react-router-dom": "^5.0.0"
   }
 }
